# cw_coal

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: BruteForceGlobal.cxx.74BDBA9DC76CA6D2.idx  CombinerBase.h.6F5C93C7B30DE720.idx  Event.cxx.B54032C3AE3C229C.idx  Particle.h.9540701F7E50CFD8.idx  TimeFrameManager.cxx.DDAD9235CD441FF3.idx  TimeFrameManager.h.6AA9010960383CB3.idx
condor/: cwcoal.sub  joblist_afterART.txt  joblist_afterZPC.txt  joblist_beforeART.txt  joblist_beforeZPC.txt  run_cwcoal.sh  run_testenv.sh
condor/lists/: afterZPC_00.list  afterZPC_01.list  afterZPC_02.list  afterZPC_03.list  afterZPC_04.list  afterZPC_05.list  afterZPC_06.list  afterZPC_07.list  afterZPC_08.list  afterZPC_09.list  afterZPC_10.list  afterZPC_11.list  afterZPC_12.list  afterZPC_13.list  afterZPC_14.list  afterZPC_15.list  afterZPC_16.list  afterZPC_17.list  afterZPC_18.list  afterZPC_19.list  afterZPC_20.list  afterZPC_21.list  afterZPC_22.list  afterZPC_23.list  afterZPC_24.list  afterZPC_25.list  afterZPC_26.list  afterZPC_27.list  afterZPC_28.list  afterZPC_29.list  afterZPC_30.list  afterZPC_31.list  afterZPC_32.list  afterZPC_33.list  afterZPC_34.list  afterZPC_35.list  afterZPC_36.list  afterZPC_37.list  afterZPC_38.list  afterZPC_39.list  (+40 more)
data/: dist_parton_afART.root  dist_parton_bfART.root
include/: Combiners.h  LinkDef.h
include/ana/: AnalyzerCVE.h  AnalyzerQA.h
include/core/: CombinerBase.h  Event.h  PIDAssigner.h  PIDInference.h  Particle.h  PartonKDTree.h  PhysicsConstants.h  TimeFrameManager.h
include/io/: EventRandomGen.h  EventReader.h  EventReaderAMPT.h  EventWriter.h
scripts/: check_root.C  draw.py  draw_scaled_histograms.C  investigate_baryon-pref_ratio.py  visualize_event.C  visualize_event.py
src/ana/: AnalyzerCVE.cxx  AnalyzerQA.cxx
src/app/: analysis.cpp  cwcoal.cpp
src/combiner/: BruteForceDualGreedy.cxx  BruteForceGlobal.cxx  BruteForceGreedy.cxx  ExhaustiveCompetitive.cxx  ExhaustiveSequential.cxx  ExhaustiveSorted.cxx  KDTreeCompetitive.cxx  KDTreeDualGreedy.cxx  KDTreeGlobal.cxx  KDTreeGreedy.cxx  KDTreeSequential.cxx  KDTreeSorted.cxx
src/core/: CombinerBase.cxx  Event.cxx  PIDInference.cxx  Particle.cxx  TimeFrameManager.cxx
src/io/: EventRandomGen.cxx  EventReader.cxx  EventReaderAMPT.cxx  EventWriter.cxx
test/: test_combiner.cpp  test_eventReaderAMPT.cpp  test_pidInference.cpp
